tests/parser/should_fail/T21843f.hs
module UnicodeSmartQuotes where

badChar = '\‘'
