tests/parser/should_fail/T21843f.stderr
T21843f.hs:3:11: error: [GHC-31623]
    Unicode character '‘' ('\8216') looks like ''' (Single Quote), but it is not

